<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/book_list"
    android:padding="16dp">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/book_cover"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:padding="1dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/book_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_progress"
            android:layout_gravity="end"
            android:padding="1dp"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="16dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">
        <ImageView
            android:id="@+id/book_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/modify"
            android:src="@drawable/modify"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/book_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/favorite"
            android:src="@drawable/like" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/book_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete" />

    </LinearLayout>


</LinearLayout>